[workspace]
members = ["packages/*", "contracts/*"]

[workspace.package]
version = "1.3.0"
edition = "2021"
license = "GPL 3.0"
repository = "https://github.com/cosmorama/wynd-lsd"

[workspace.dependencies]
anyhow = "1"
cosmwasm-schema = "1.1"
cosmwasm-std = { version = "1.1", features = ["staking"] }
cosmwasm-storage = "1.1"
cw2 = "1.0"
cw20 = "1.0"
cw20-base = { version = "1.0", package = "cw20-base", features = ["library"] }
cw-controllers = "1.0"
cw-multi-test = "0.16.3"
cw-placeholder = { version = "2.0", git = "https://github.com/cosmorama/wynddex.git", tag = "v2.0.2", features = [
    "library",
] }
cw-storage-plus = "1.0"
cw-utils = "1.0"
semver = "1"
serde = { version = "1", default-features = false, features = ["derive"] }
thiserror = "1"
wynd-lsd-hub = { path = "./contracts/lsd-hub", version = "1.3.0", features = [
    "library",
] }
wyndex = { version = "2.0", git = "https://github.com/cosmorama/wynddex.git", tag = "v2.0.2" }
wyndex-pair-lsd = { version = "2.0", git = "https://github.com/cosmorama/wynddex.git", tag = "v2.0.2", features = [
    "library",
] }
test-case = "3.0.0"

[profile.release.package.wynd-lsd-hub]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
strip = true
