[package]
name = "bond-router"
authors = ["Cosmorama <cosmorama@proton.me>"]
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
cw-utils = { workspace = true }
thiserror = { workspace = true }
wynd-lsd-hub = { workspace = true }

wyndex = { version = "2.0", git = "https://github.com/cosmorama/wynddex.git" }
wyndex-factory = { version = "2.0", git = "https://github.com/cosmorama/wynddex.git", features = [ "library" ]}
wyndex-pair-lsd = { version = "2.0", git = "https://github.com/cosmorama/wynddex.git", features = [
    "library",
] }
wyndex-stake = { version = "2.0", git = "https://github.com/cosmorama/wynddex.git", features = [ "library" ]}

[dev-dependencies]
anyhow = { workspace = true }
cw-multi-test = { workspace = true }
cw20 = { workspace = true }
cw20-base = { workspace = true }
